apps/servarr/whisparr/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: whisparr
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  selector:
    matchLabels:
      app.kubernetes.io/instance: whisparr
      app.kubernetes.io/name: whisparr
  serviceName: whisparr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: whisparr
        app.kubernetes.io/name: whisparr
    spec:
      containers:
        - name: whisparr
          image: whisparr
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 6969
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 360
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
            - name: run
              mountPath: /run
          securityContext:
            capabilities:
              add:
                - CHOWN
                - FOWNER
                - SETGID
                - SETUID
            readOnlyRootFilesystem: false
      securityContext:
        fsGroup: 1000
      volumes:
        - name: run
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 8Gi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
