apps/servarr/whisparr/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisparr
spec:
  rules:
    - backendRefs:
        - name: whisparr
          port: 6969
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisparr-api
spec:
  rules:
    - matches:
        - headers:
            - name: X-Api-Key
              type: RegularExpression
              value: .+
      backendRefs:
        - name: whisparr
          port: 6969
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisparr-health
spec:
  rules:
    - matches:
        - path:
            type: Exact
            value: /ping
      backendRefs:
        - name: whisparr
          port: 6969
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisparr-redirect
spec:
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
